{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 238,
  "lineage": "943eead1-98ec-b649-bb8b-da2a2ee54891",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/networkInterfaces/en1tstkk99_nic",
            "internal_domain_name_suffix": "weutnx1ou3pezf5beitul0kj3b.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "en1tstkk99_nic_ip",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/publicIPAddresses/en1tstkk99_publicIp1",
                "subnet_id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/virtualNetworks/en1tstkk99_vnet/subnets/en1tstkk99_subnet1"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-22-48-9E-6A-61",
            "name": "en1tstkk99_nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "en1tstkk99_rg",
            "virtual_machine_id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Compute/virtualMachines/en1tstkk99_vm1"
          },
          "dependencies": [
            "azurerm_virtual_network.bde_test_vnet",
            "azurerm_public_ip.publicIp1",
            "azurerm_resource_group.example_resourcegroup",
            "azurerm_subnet.subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main_aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/networkSecurityGroups/en1tstkk99_sg_aks",
            "location": "northeurope",
            "name": "en1tstkk99_sg_aks",
            "resource_group_name": "en1tstkk99_rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example_resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/networkSecurityGroups/en1tstkk99_sg_main",
            "location": "northeurope",
            "name": "en1tstkk99_sg_main",
            "resource_group_name": "en1tstkk99_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "en1tstkk99_rule80_ext",
                "priority": 150,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example_resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.64.0/20"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/networkSecurityGroups/en1tstkk99_sg_aks/securityRules/en1tstkk99_sg_aks_rule_main",
            "name": "en1tstkk99_sg_aks_rule_main",
            "network_security_group_name": "en1tstkk99_sg_aks",
            "priority": 150,
            "protocol": "Tcp",
            "resource_group_name": "en1tstkk99_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main_aks",
            "azurerm_resource_group.example_resourcegroup",
            "azurerm_subnet.subnet_aks",
            "azurerm_virtual_network.bde_test_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule80",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/networkSecurityGroups/en1tstkk99_sg_main/securityRules/en1tstkk99_rule80_ext",
            "name": "en1tstkk99_rule80_ext",
            "network_security_group_name": "en1tstkk99_sg_main",
            "priority": 150,
            "protocol": "Tcp",
            "resource_group_name": "en1tstkk99_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main_sg",
            "azurerm_resource_group.example_resourcegroup",
            "azurerm_subnet.subnet_1",
            "azurerm_subnet.subnet_2",
            "azurerm_virtual_network.bde_test_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "k8sIngressIp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/publicIPAddresses/k8sIngressIp",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.69.207.158",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "k8sIngressIp",
            "resource_group_name": "en1tstkk99_rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.example_resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/publicIPAddresses/en1tstkk99_publicIp1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.113.14.116",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "en1tstkk99_publicIp1",
            "resource_group_name": "en1tstkk99_rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.example_resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/virtualNetworks/en1tstkk99_vnet/subnets/en1tstkk99_subnet1",
            "name": "en1tstkk99_subnet1",
            "resource_group_name": "en1tstkk99_rg",
            "virtual_network_name": "en1tstkk99_vnet"
          },
          "dependencies": [
            "azurerm_resource_group.example_resourcegroup",
            "azurerm_virtual_network.bde_test_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.11.0/24",
            "address_prefixes": [
              "10.0.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/virtualNetworks/en1tstkk99_vnet/subnets/en1tstkk99_subnet11",
            "name": "en1tstkk99_subnet11",
            "resource_group_name": "en1tstkk99_rg",
            "virtual_network_name": "en1tstkk99_vnet"
          },
          "dependencies": [
            "azurerm_resource_group.example_resourcegroup",
            "azurerm_virtual_network.bde_test_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.12.0/24",
            "address_prefixes": [
              "10.0.12.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/virtualNetworks/en1tstkk99_vnet/subnets/en1tstkk99_subnet12",
            "name": "en1tstkk99_subnet12",
            "resource_group_name": "en1tstkk99_rg",
            "virtual_network_name": "en1tstkk99_vnet"
          },
          "dependencies": [
            "azurerm_resource_group.example_resourcegroup",
            "azurerm_virtual_network.bde_test_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/virtualNetworks/en1tstkk99_vnet/subnets/en1tstkk99_subnet2",
            "name": "en1tstkk99_subnet2",
            "resource_group_name": "en1tstkk99_rg",
            "virtual_network_name": "en1tstkk99_vnet"
          },
          "dependencies": [
            "azurerm_resource_group.example_resourcegroup",
            "azurerm_virtual_network.bde_test_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.64.0/20",
            "address_prefixes": [
              "10.0.64.0/20"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/virtualNetworks/en1tstkk99_vnet/subnets/en1tstkk99_subnet_aks",
            "name": "en1tstkk99_subnet_aks",
            "resource_group_name": "en1tstkk99_rg",
            "virtual_network_name": "en1tstkk99_vnet"
          },
          "dependencies": [
            "azurerm_resource_group.example_resourcegroup",
            "azurerm_virtual_network.bde_test_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "bde_test_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "1.1.1.1",
              "8.8.8.8",
              "8.8.4.4"
            ],
            "guid": "df3629b1-a76e-4c5e-97e1-222745e949e9",
            "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/virtualNetworks/en1tstkk99_vnet",
            "location": "northeurope",
            "name": "en1tstkk99_vnet",
            "resource_group_name": "en1tstkk99_rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/virtualNetworks/en1tstkk99_vnet/subnets/en1tstkk99_subnet1",
                "name": "en1tstkk99_subnet1"
              },
              {
                "address_prefix": "10.0.11.0/24",
                "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/virtualNetworks/en1tstkk99_vnet/subnets/en1tstkk99_subnet11",
                "name": "en1tstkk99_subnet11"
              },
              {
                "address_prefix": "10.0.12.0/24",
                "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/virtualNetworks/en1tstkk99_vnet/subnets/en1tstkk99_subnet12",
                "name": "en1tstkk99_subnet12"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/e4363b21-2c35-48eb-a773-c84c8292dfa4/resourceGroups/en1tstkk99_rg/providers/Microsoft.Network/virtualNetworks/en1tstkk99_vnet/subnets/en1tstkk99_subnet2",
                "name": "en1tstkk99_subnet2"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.example_resourcegroup"
          ]
        }
      ]
    }
  ]
}